solve the problem that set items height with align-items:start

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ header .container {
 section .container {
   grid-template-columns: 25% 50% 25%;
   margin-top: 10px;
+  align-items: start;
 }
 
 .sidebar-languages {
@@ -118,6 +119,7 @@ section .container {
   border: 1px solid #707070;
   border-radius: 5px;
   padding-top: 20px;
+  padding-bottom: 20px;
   padding-right: 10px;
   padding-left: 10px;
 }
